--- a/packages/fxa-settings/src/styles/drop-down-menu.scss
+++ b/packages/fxa-settings/src/styles/drop-down-menu.scss
@@ -1,12 +1,17 @@
-// This Source Code Form is subject to the terms of the Mozilla Public
-// License, v. 2.0. If a copy of the MPL was not distributed with this
-// file, You can obtain one at http://mozilla.org/MPL/2.0/.
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-.drop-down-menu {
-  @apply w-64 bg-white absolute shadow-md rounded;
+@tailwind screens;
 
-  &::before {
-    content: '';
-    @apply caret-top absolute -top-3 left-55;
+/* stylelint-disable */
+@responsive {
+    .drop-down-menu {
+      @apply w-64 bg-white absolute shadow-md rounded-lg;
+    }
+    .drop-down-menu::before {
+      content: '';
+      @apply caret-top absolute -top-3 left-55;
+    }
   }
-}
+  /* stylelint-enable */
